# Sniffer

./: .gitignore  .licenserc.json  CHANGELOG.md  CMakeLists.txt  OpenRemise.kicad_sym  README.md  bom.xlsx  sniffer.kicad_dru  sniffer.kicad_pcb  sniffer.kicad_prl  sniffer.kicad_pro  sniffer.kicad_sch  sym-lib-table
.github/workflows/: docs.yml
docs/: CMakeLists.txt  capture_a_trace.webm  doxygen.hpp  footer.html  header.html
gerber/: sniffer-B_Cu.gbl  sniffer-B_Mask.gbs  sniffer-B_Silkscreen.gbo  sniffer-Edge_Cuts.gm1  sniffer-F_Cu.gtl  sniffer-F_Mask.gts  sniffer-F_Silkscreen.gto  sniffer-NPTH.drl  sniffer-PTH.drl  sniffer-all.pos
